--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}Developer Portfolio{% endblock %}</title>
+    <meta name="description" content="Personal portfolio and blog showcasing projects and articles">
+    <link rel="stylesheet" href="{% static 'blog/css/styles.css' %}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    {% block extra_css %}{% endblock %}
 </head>
 <body>
+{% include "parts/navbar.html" %}
+<main>
+    {% block content %}{% endblock %}
+</main>
 
+{% include "parts/footer.html" %}
+
+<script src="{% static 'blog/js/script.js' %}"></script>
+{% block extra_js %}{% endblock %}
 </body>
 </html>
