--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -14,6 +14,7 @@
     {% block extra_css %}{% endblock %}
 </head>
 <body>
+<div id="progress-bar"></div>
 {% include "parts/navbar.html" %}
 <main>
     {% block content %}{% endblock %}
