--- a/core/templates/blog/article_detail.html
+++ b/core/templates/blog/article_detail.html
@@ -6,7 +6,7 @@
     <article class="article-detail">
         <div class="container">
             <header class="article-header">
-                <h1>{{ article.title }}</h1>
+                <h1>{{ article.title|safe }}</h1>
                 <div class="article-meta">
                     <div class="article-date">{{ article.created|date:"F j, Y" }}</div>
                 </div>
@@ -25,7 +25,7 @@
 
                 {% if article.image %}
                     <div class="content-section">
-                        {{ article.content2|safe }}
+                        {{ article.content2|escape }}
                     </div>
                 {% endif %}
             </div>
