--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -10,7 +10,7 @@
                      onerror="this.src='/static/img/placeholder.svg'">
             </div>
 
-            <h1 class="name">John Doe</h1>
+            <h1 class="name">Muxtorov Shaxzodbek</h1>
             <p class="job-title">Full Stack Developer</p>
             <p class="quote">"Crafting elegant solutions for complex problems through code and creativity."</p>
 
