--- a/core/templates/blog/articles.html
+++ b/core/templates/blog/articles.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 
-{% block title %}Articles | Developer Portfolio{% endblock %}
+{% block title %}Articles | Shaxzodbek's Blog{% endblock %}
 
 {% block content %}
     <section class="page-header">
         <div class="container">
-            <h1>Articles</h1>
-            <p>Sharing knowledge and experiences through writing</p>
+            <h1>Blog</h1>
+            <p>Sharing knowledge and experiences through writing.</p>
         </div>
     </section>
     <section class="articles">
