--- a/core/templates/blog/certification_detail.html
+++ b/core/templates/blog/certification_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ certification.name }} | Developer Portfolio{% endblock %}
+{% block title %}{{ certification.name }} | Shaxzodbek's Blog{% endblock %}
 
 {% block content %}
     <section class="certification-detail">
