--- a/core/templates/blog/certifications.html
+++ b/core/templates/blog/certifications.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Certifications | Developer Portfolio{% endblock %}
+{% block title %}Certifications | Shaxzodbek's Blog{% endblock %}
 
 {% block content %}
     <section class="page-header">
