--- a/core/templates/blog/project_detail.html
+++ b/core/templates/blog/project_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ project.name }} | Developer Portfolio{% endblock %}
+{% block title %}{{ project.name }} | Shaxzodbek's Blog{% endblock %}
 
 {% block content %}
     <section class="project-detail">
