--- a/core/templates/blog/projects.html
+++ b/core/templates/blog/projects.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Projects | Developer Portfolio{% endblock %}
+{% block title %}Projects | Shaxzodbek's Blog{% endblock %}
 
 {% block content %}
     <section class="page-header">
