--- a/core/templates/parts/navbar.html
+++ b/core/templates/parts/navbar.html
@@ -1,12 +1,12 @@
 <header class="navbar">
     <div class="container">
         <div class="logo">
-            <a href="/">DevPortfolio</a>
+            <a href="/">Shaxzodbek's Blog</a>
         </div>
         <nav>
             <ul class="nav-links">
                 <li><a href="/" class="{% if request.path == '/' %}active{% endif %}">Home</a></li>
-                <li><a href="/articles/" class="{% if '/articles/' in request.path %}active{% endif %}">Articles</a>
+                <li><a href="/articles/" class="{% if '/articles/' in request.path %}active{% endif %}">Blog</a>
                 </li>
                 <li><a href="/projects/" class="{% if '/projects/' in request.path %}active{% endif %}">Projects</a>
                 </li>
