--- a/core/templates/404.html
+++ b/core/templates/404.html
@@ -1,7 +1,6 @@
-
 {% extends "base.html" %}
 
-{% block title %}Page Not Found | Developer Portfolio{% endblock %}
+{% block title %}Page Not Found | Shaxzodbek's Blog{% endblock %}
 
 {% block content %}
     <section class="error-page">
@@ -9,7 +8,7 @@
             <div class="error-content">
                 <h1>404</h1>
                 <h2>Page Not Found</h2>
-                <p>The page you are looking for might have been removed, had its name changed, or is temporarily unavailable.</p>
+                <p>Qidirmoqchi bo'lgan sahifa olib tashlangan, nomi o'zgartirilgan yoki vaqtincha mavjud emas.</p>
                 <a href="/" class="button">Back to Home</a>
             </div>
         </div>
