--- a/core/templates/blog/article_detail.html
+++ b/core/templates/blog/article_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ article.title }} | Developer Portfolio{% endblock %}
+{% block title %}{{ article.title }} | Shaxzodbek's Blog{% endblock %}
 
 {% block content %}
     <article class="article-detail">
@@ -25,7 +25,7 @@
 
                 {% if article.image %}
                     <div class="content-section">
-                        {{ article.content2|escape }}
+                        {{ article.content2|safe }}
                     </div>
                 {% endif %}
             </div>
