--- a/core/templates/blog/post.html
+++ b/core/templates/blog/post.html
@@ -5,7 +5,7 @@
 {% block content %}
     <section class="page-header">
         <div class="container">
-            <h1>Blog</h1>
+            <h1>Post</h1>
             <p>Sharing knowledge and experiences through writing.</p>
         </div>
     </section>
@@ -29,7 +29,7 @@
                         </article>
                     {% endif %}
                 {% empty %}
-                    <p>No articles to display.</p>
+                    <p>No posts to display.</p>
                 {% endfor %}
             </div>
         </div>
