--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -144,7 +144,7 @@
             </div>
 
             <div class="view-all">
-                <a href="{% url 'blog:articles' %}" class="button">View All Articles</a>
+                <a href="{% url 'blog:post' %}" class="button">View All Articles</a>
             </div>
         </div>
     </section>
