--- a/core/templates/parts/footer.html
+++ b/core/templates/parts/footer.html
@@ -23,7 +23,7 @@
                     <h4>Quick Links</h4>
                     <ul>
                         <li><a href="/">Home</a></li>
-                        <li><a href="/articles/">Post</a></li>
+                        <li><a href="/post/">Post</a></li>
                         <li><a href="/projects/">Projects</a></li>
                         <li><a href="/certifications/">Certifications</a></li>
                     </ul>
