--- a/core/templates/parts/footer.html
+++ b/core/templates/parts/footer.html
@@ -32,6 +32,7 @@
                     <h4>Contact</h4>
                     <p><i class="fas fa-envelope"></i>muxtorovshaxzodbek16@gmail.com</p>
                     <p><i class="fas fa-map-marker-alt"></i> Tashkent, Uzbekistan</p>
+                    <p><i class="fas fa-phone"></i> +998 91 526 01 12</p>
                 </div>
             </div>
         </div>
