--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -30,6 +30,7 @@
     <meta name="twitter:image" content="{% block twitter_image %}{% static 'blog/img/shaxzodbek.png' %}{% endblock %}">
     <meta name="twitter:site" content="@Shaxzodbek1608">
     <link rel="stylesheet" href="{% static 'blog/css/styles.css' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'img/sh.ico' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
