--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -30,7 +30,10 @@
     <meta name="twitter:image" content="{% block twitter_image %}{% static 'blog/img/shaxzodbek.png' %}{% endblock %}">
     <meta name="twitter:site" content="@Shaxzodbek1608">
     <link rel="stylesheet" href="{% static 'blog/css/styles.css' %}">
-    <link rel="icon" type="image/x-icon" href="{% static 'img/sh.ico' %}">
+    <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon">
+    <link rel="icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon">
+    <link rel="apple-touch-icon" href="{% static 'img/apple-touch-icon.png' %}">
+    <link rel="apple-touch-icon-precomposed" href="{% static 'img/apple-touch-icon-precomposed.png' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
