--- a/core/templates/parts/footer.html
+++ b/core/templates/parts/footer.html
@@ -33,6 +33,7 @@
                     <p><i class="fas fa-envelope"></i>muxtorovshaxzodbek16@gmail.com</p>
                     <p><i class="fas fa-map-marker-alt"></i> Tashkent, Uzbekistan</p>
                     <p><i class="fas fa-phone"></i> +998 91 526 01 12</p>
+                    <p><a href="https://wakatime.com/@018e9ffe-32fb-43d8-b2c6-d0499aeb695b"><img src="https://wakatime.com/badge/user/018e9ffe-32fb-43d8-b2c6-d0499aeb695b.svg" alt="Total time coded since Apr 2 2024" /></a></p>
                 </div>
             </div>
         </div>
