--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -130,10 +130,10 @@
                             </div>
                         {% endif %}
                         <div class="article-content">
-                            <h3><a href="{% url 'blog:article_detail' post.slug %}">{{ post.title }}</a></h3>
+                            <h3><a href="{% url 'blog:post_detail' post.slug %}">{{ post.title }}</a></h3>
                             <div class="article-date">{{ post.created|date:"F j, Y" }}</div>
                             <p>{{ post.content1|truncatewords:20 }}</p>
-                            <a href="{% url 'blog:article_detail' post.slug %}" class="read-more">Read More</a>
+                            <a href="{% url 'blog:post_detail' post.slug %}" class="read-more">Read More</a>
                         </div>
                     </article>
                 {% empty %}
