- Initialize migrations for lessons app: added models for Topic, StepsOfLesson, and Lesson. - Updated robots.txt with custom sitemap URL. - Removed outdated views and URLs from lessons app. - Added base template for lessons. - Adjusted CD workflow to restart nginx service. - Modified styles for error-content header in CSS. - Improved content layout in post_detail.html template.

--- a/core/static/blog/css/styles.css
+++ b/core/static/blog/css/styles.css
@@ -532,7 +532,7 @@ section {
 
 .error-content h1 {
     font-size: 8rem;
-    color: var(--primary-color);
+    color: var(--secondary-color);
     line-height: 1;
 }
 
