Add "About Me" section with model, template, admin, and styling changes

--- a/static/blog/css/styles.css
+++ b/static/blog/css/styles.css
@@ -520,3 +520,9 @@ section {
     height: 30px;
     object-fit: contain;
 }
+
+.timeline-img {
+    object-fit: cover;
+    width: 96px;
+    height: 96px;
+}
