--- a/templates/base.html
+++ b/templates/base.html
@@ -6,32 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}Shaxzodbek's Blog{% endblock %}</title>
 
-    <!-- SEO -->
     <meta name="description"
           content="{% block description %}Shaxzodbek's Blog – Personal thoughts, tutorials, and insights on technology and programming{% endblock %}">
     <meta name="keywords"
           content="{% block keywords %}blog, technology, programming, python, javascript, web development, AI, machine learning{% endblock %}">
     <meta name="author" content="Shaxzodbek Muxtorov">
 
-    <!-- Open Graph / Twitter cards -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="{{ request.build_absolute_uri }}">
     <meta property="og:title" content="{% block og_title %}Shaxzodbek's Blog{% endblock %}">
     <meta property="og:description"
           content="{% block og_description %}Shaxzodbek's Blog – Personal thoughts, tutorials, and insights on technology and programming{% endblock %}">
-    <meta property="og:image" content="{% block og_image %}{% static 'blog/img/shaxzodbek.png' %}{% endblock %}">
+    <meta property="og:image" content="{% block og_image %}{% static 'blog/img/shaxzodbek.jpeg' %}{% endblock %}">
     <meta property="og:site_name" content="Shaxzodbek's Blog">
     <meta property="og:locale" content="en_US">
 
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="{% static 'blog/img/shaxzodbek.jpeg' %}">
     <meta name="twitter:url" content="{{ request.build_absolute_uri }}">
     <meta name="twitter:title" content="{% block twitter_title %}Shaxzodbek's Blog{% endblock %}">
     <meta name="twitter:description"
           content="{% block twitter_description %}Shaxzodbek's Blog – Personal thoughts, tutorials, and insights on technology and programming{% endblock %}">
-    <meta name="twitter:image" content="{% block twitter_image %}{% static 'blog/img/shaxzodbek.png' %}{% endblock %}">
+    <meta name="twitter:image" content="{% block twitter_image %}{% static 'blog/img/shaxzodbek.jpeg' %}{% endblock %}">
     <meta name="twitter:site" content="@Shaxzodbek1608">
 
-    <!-- ★ Core CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
           integrity="sha512-IvTkYu98+..." crossorigin="anonymous">
     <link rel="stylesheet"
@@ -39,31 +36,74 @@
           integrity="sha512-bO5u7rU..." crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'blog/css/styles.css' %}">
 
-    <!-- Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-    <!-- Favicons -->
-    <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}">
-    <link rel="apple-touch-icon" href="{% static 'img/apple-touch-icon.png' %}">
+    <link rel="shortcut icon" href="{% static 'img/favicon.jpeg' %}">
+    <link rel="apple-touch-icon" href="{% static 'img/apple-touch-icon.jpeg' %}">
+
+    <link rel="canonical" href="{{ request.build_absolute_uri }}">
+
+    <meta name="theme-color" content="#0d6efd">
+    <meta name="color-scheme" content="light dark">
+
+    <meta name="apple-mobile-web-app-title" content="Shaxzodbek's Blog">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <link rel="apple-touch-startup-image"
+          href="{% static 'img/apple-touch-icon-precomposed.jpeg' %}">
+
+    <link rel="dns-prefetch" href="//fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
+
+    <link rel="preload"
+          href="https://fonts.gstatic.com/s/inter/v12/Inter-VariableFont_slnt,wght.woff2"
+          as="font" type="font/woff2" crossorigin>
+
+
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/favicon.jpeg' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon.jpeg' %}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/apple-touch-icon.jpeg' %}">
+    <link rel="mask-icon" href="{% static 'img/favicon.jpeg' %}" color="#0d6efd">
+    <meta name="msapplication-TileColor" content="#0d6efd">
+    <meta name="msapplication-TileImage" content="{% static 'img/favicon.jpeg' %}">
 
     {% block extra_css %}{% endblock %}
 </head>
 <body class="d-flex flex-column min-vh-100">
-    <!-- Optional progress bar -->
-    <div id="progress-bar"></div>
+<div id="progress-bar"></div>
 
-    {% include "parts/navbar.html" %}
+{% include "parts/navbar.html" %}
 
-    <main class="flex-grow-1">
-        {% block content %}{% endblock %}
-    </main>
+<main class="flex-grow-1">
+    {% block content %}{% endblock %}
+</main>
 
-    {% include "parts/footer.html" %}
+{% include "parts/footer.html" %}
 
-    <!-- ★ Core JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha512-bM4Mj8s..." crossorigin="anonymous"></script>
-    <script src="{% static 'blog/js/script.js' %}"></script>
-    {% block extra_js %}{% endblock %}
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha512-bM4Mj8s..." crossorigin="anonymous"></script>
+<script src="{% static 'blog/js/script.js' %}"></script>
+<script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Shaxzodbek Muxtorov",
+      "url": "https://www.shaxzodbek.com",
+      "sameAs": [
+        "https://github.com/Shaxzodbek16",
+        "https://t.me/tmshaxzodbek",
+        "https://linkedin.com/in/shaxzodbek-muxtorov-59144a294",
+        "https://www.youtube.com/@Shaxzodbek16"
+      ],
+      "jobTitle": "Software Engineer",
+      "image": "{% static 'blog/img/shaxzodbek.jpeg' %}"
+}
+</script>
+{% block extra_js %}{% endblock %}
 </body>
 </html>
