--- a/templates/base.html
+++ b/templates/base.html
@@ -30,16 +30,19 @@
     <meta name="twitter:site" content="@Shaxzodbek1608">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-          integrity="sha512-IvTkYu98+..." crossorigin="anonymous">
+          crossorigin="anonymous">
     <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-          integrity="sha512-bO5u7rU..." crossorigin="anonymous">
+          href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'blog/css/styles.css' %}">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-    <link rel="shortcut icon" href="{% static 'img/favicon.jpeg' %}">
-    <link rel="apple-touch-icon" href="{% static 'img/apple-touch-icon.jpeg' %}">
+    <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static 'img/site.webmanifest' %}">
 
     <link rel="canonical" href="{{ request.build_absolute_uri }}">
 
@@ -56,10 +59,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
 
-    <link rel="preload"
-          href="https://fonts.gstatic.com/s/inter/v12/Inter-VariableFont_slnt,wght.woff2"
-          as="font" type="font/woff2" crossorigin>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 
     <meta name="robots" content="index, follow">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -86,7 +88,7 @@
 {% include "parts/footer.html" %}
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha512-bM4Mj8s..." crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>
 <script src="{% static 'blog/js/script.js' %}"></script>
 <script type="application/ld+json">
     {
